set z-index of lightswitch as 1031 to display above the footer with fixed-bottom

--- a/src/Moonglade.Web/wwwroot/css/src/base.css
+++ b/src/Moonglade.Web/wwwroot/css/src/base.css
@@ -414,7 +414,7 @@ footer {
     right: 20px;
     text-align: center;
     width: 32px;
-    z-index: 996;
+    z-index: 1031;
     opacity: 0.8;
 }
 
